Agrega ruteo de home a menu y hace la vista del menú

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
-<main id="home">
-  <img class="ic_launcher" src="../../../assets/img/ic_launcher.png" alt="">  <input id="user" class="rectangle" type="number" placeholder="Número de empleado/a">
+<main id="home" class="grid">
+  <img class="logo" src="assets/img/ic_launcher.png" alt="">  <input id="user" class="rectangle" type="number" placeholder="Número de empleado/a">
   <input id="password" class="rectangle" type="password" placeholder="Clave de empleado/a">
-  <button id="btn-log-in" class="ellipse" type="button"></button>
+  <button (click)=goMenu() type="button" id="btn-log-in" class="ellipse" type="button"></button>
 </main>
