Elabora el ticket

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,6 +2,6 @@
     <a id="img-desayuno" title="desayuno" [routerLink]="['/orden']"><img src="assets/img/desayuno.png" alt="desayuno"> </a>
     <h3 id="h3-desayuno" class="title-menu">Desayuno</h3>
 
-    <a id="img-comida" href="" title="comida" [routerLink]="['/orden','comida']"><img src="assets/img/comida.png" alt="comida"></a>
+    <a id="img-comida" href="" title="comida" [routerLink]="['/orden']"><img src="assets/img/comida.png" alt="comida"></a>
     <h3 id="h3-comida" class="title-menu">Comida</h3>
 </main>
