Crea componente que almacena los botones de desayuno y comida, crea la sección donde se mostraran las opciones

--- a/src/app/components/shared/ticket/ticket.component.html
+++ b/src/app/components/shared/ticket/ticket.component.html
@@ -1,4 +1,7 @@
 <main id="main-ticket">
+    <main id="products">
+
+    </main>
     <section id="ticket">
         <h1 class="font">ORDEN</h1>
         <main id="elements" class="aling-left">
