--- a/src/app/components/food/food.component.html
+++ b/src/app/components/food/food.component.html
@@ -2,8 +2,9 @@
     <main class="main-button">
         <button class="button saucers">Platillos</button>
         <button class="button drink">Bebidas</button>
-        <button id="ingredients-break" class="button">Sin ingredientes</button>
+        <button id="garniture" class="button">Guarnición</button>
         <button class="button ok">OK</button>
         <button class="button extra">Extra</button>
+        <button id="ingredients-food" class="button">Sin ingredientes</button>
     </main>
 </main>
