--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -1,3 +1,5 @@
 <app-nav></app-nav>
 <app-ticket></app-ticket>
 <app-footer></app-footer>
+<!-- <app-breakfast></app-breakfast> -->
+<app-food></app-food>
