--- a/src/app/components/shared/ticket/ticket.component.css
+++ b/src/app/components/shared/ticket/ticket.component.css
@@ -11,17 +11,25 @@
     text-align: initial;
 }
 
+
 #main-ticket {
     display: grid;
     grid-template-columns: 60% auto;
+    width: 100%;
     height: 65vh;
+}
+
+#products {
+    background-color: #242e3a; 
+    grid-column: 1/2;
+    margin-right: 5px;
 }
 
 #ticket {
     background-color: #38404a;
     text-align: center;
     font-size: 25px;
-    grid-column: 2;
+    grid-column: 2/3;
 }
 
 #elements {
@@ -41,3 +49,4 @@
 #cost {
     grid-column: 3;
 }
+
