--- a/src/app/components/food/food.component.html
+++ b/src/app/components/food/food.component.html
@@ -1,4 +1,4 @@
-<main class="principal">
+<main *ngIf="mostrar" class="principal">
     <main class="main-button">
         <button class="button saucers">Platillos</button>
         <button class="button drink">Bebidas</button>
