--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -5,8 +5,8 @@
     </nav>
 
     <nav id="nav-icon">
-        <img id="menu" class="icons" src="../../../../assets/img/menu.png" alt="">
+        <a [routerLink]="['/menu']" id="menu"><img class="icons" src="../../../../assets/img/menu.png" alt=""></a>
         <img id="configuration" class="icons" src="../../../../assets/img/configuración.png" alt="">
-        <img id="exit" class="icons" src="../../../../assets/img/salir.png" alt="">
+        <a [routerLink]="['/home']" id="exit"><img class="icons" src="../../../../assets/img/salir.png" alt=""></a>
     </nav>
-</header>
+</header>0
