--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -9,4 +9,4 @@
         <img id="configuration" class="icons" src="../../../../assets/img/configuración.png" alt="">
         <a [routerLink]="['/home']" id="exit"><img class="icons" src="../../../../assets/img/salir.png" alt=""></a>
     </nav>
-</header>0
+</header>
