Agrega las vistas de comida y desayuno y da funcionaidad a el boton de platillos para hacer la vista

--- a/src/app/components/breakfast/breakfast.component.html
+++ b/src/app/components/breakfast/breakfast.component.html
@@ -1,6 +1,6 @@
-<main *ngIf="mostrar.mostrar" class="principal">
+<main class="principal">
     <main class="main-button">
-        <button class="button saucers">Platillos</button>
+        <button [routerLink]="[ 'platillos' ]" class="button saucers">Platillos</button>
         <button class="button drink">Bebidas</button>
         <button id="ingredients-break" class="button">Sin ingredientes</button>
         <button class="button ok">OK</button>
