--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -2,7 +2,4 @@
 <app-ticket></app-ticket>
 <app-products></app-products>
 <app-footer></app-footer>
-
-<!-- NGIF -->
-<app-breakfast></app-breakfast>
-<app-food></app-food>
+<router-outlet></router-outlet>
