--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -5,4 +5,9 @@
         <p id="p-cost" class="font total">$</p>
         <button id="cancel" class="btn-footer font" type="button">Cancelar orden</button>
     </nav>
+
+    <nav id="break-food">
+
+    </nav>
+
 </footer>
