--- a/src/app/components/shared/nav/nav.component.css
+++ b/src/app/components/shared/nav/nav.component.css
@@ -5,10 +5,31 @@
         width: 100%
     }
     
+    .icons {
+        width: 42px;
+        height: 41px;
+    }
+    
+    .btn {
+        font-weight: bold;
+        color: #ffffff;
+        font-size: 22px;
+        margin: auto;
+        height: 80%;
+        width: 80%;
+        background-color: #38404a;
+    }
+    
+    button:hover {
+        border-radius: 50%;
+        border: 3px solid #fffafa;
+        background-color: #242e3a;
+    }
+    
     #nav-logo {
         grid-column: 1;
         display: grid;
-        grid-template-columns: 5% 12% 30% auto;
+        grid-template-columns: 5% 15% 40% auto;
         grid-template-rows: 100%;
         background-color: #38404a;
         height: 80px;
@@ -24,10 +45,11 @@
     #desayuno {
         grid-column: 3/4;
         grid-row: 1;
-        font-weight: bold;
-        color: #ffffff;
-        font-size: 22px;
-        margin: auto;
+    }
+    
+    #comida {
+        grid-column: 4;
+        grid-row: 1;
     }
     
     #nav-icon {
@@ -38,11 +60,6 @@
         background-color: #38404a;
         width: 100%;
         height: 80px;
-    }
-    
-    .icons {
-        width: 42px;
-        height: 41px;
     }
     
     #menu {
