Agrega formato al ticket

--- a/src/app/components/shared/ticket/ticket.component.html
+++ b/src/app/components/shared/ticket/ticket.component.html
@@ -1,4 +1,9 @@
 <main id="main-ticket">
+    <main id="main-products">
+        <main id="products">
+
+        </main>
+    </main>
     <section id="ticket">
         <h1 class="font">ORDEN</h1>
         <main id="elements" class="aling-left">
