--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -1,5 +1,8 @@
 <app-nav></app-nav>
-<app-ticket></app-ticket>
-<app-products></app-products>
+<app-ticket>
+    <router-outlet></router-outlet>
+</app-ticket>
 <app-footer></app-footer>
 <router-outlet></router-outlet>
+
+<!-- <app-products></app-products> -->
