--- a/src/app/components/shared/ticket/ticket.component.css
+++ b/src/app/components/shared/ticket/ticket.component.css
@@ -42,3 +42,19 @@
 #cost {
     grid-column: 3;
 }
+
+#main-products {
+    grid-column: 1;
+    display: grid;
+    width: 100%;
+    height: 65vh;
+}
+
+#products {
+    background-color: #242e3a;
+    grid-column: 1/2;
+    margin-right: 5px;
+    display: grid;
+    grid-template-columns: 25% 25% 25% auto;
+    grid-template-rows: 33.3% 33.3% auto;
+}
