--- a/src/styles.css
+++ b/src/styles.css
@@ -160,3 +160,23 @@
     grid-row: 3;
     margin: auto;
 }
+
+
+/* Inicia platillos de breakfast */
+
+#main-saucers-break {
+    background: red;
+    grid-column: 1;
+    display: grid;
+    width: 100%;
+    height: 65vh;
+}
+
+#products {
+    background-color: red;
+    grid-column: 1/2;
+    margin-right: 5px;
+    display: grid;
+    grid-template-columns: 25% 25% 25% auto;
+    grid-template-rows: 33.3% 33.3% auto;
+}
