Cambia la forma en que se hace el llenado de lo botones de breakfast (crea servicio)

--- a/src/app/components/breakfast/breakfast.component.html
+++ b/src/app/components/breakfast/breakfast.component.html
@@ -1,9 +1,3 @@
-<main class="principal">
-    <main class="main-button">
-        <button [routerLink]="[ 'platillos' ]" class="button saucers">Platillos</button>
-        <button [routerLink]="[ 'bebidas' ]" class="button drink">Bebidas</button>
-        <button [routerLink]="[ 'ingredientes' ]" id="ingredients-break" class="button">Sin ingredientes</button>
-        <button class="button ok">OK</button>
-        <button [routerLink]="[ 'extra' ]" class="button extra">Extra</button>
-    </main>
+<main id="container">
+    <button *ngFor="let btnBreak of botones; let i=index" [id]="btnBreak.id" class="button"> {{btnBreak.nombre}} </button>
 </main>
