--- a/src/app/components/shared/nav/nav.component.css
+++ b/src/app/components/shared/nav/nav.component.css
@@ -21,9 +21,8 @@
     }
     
     button:hover {
-        border-radius: 50%;
-        border: 3px solid #fffafa;
-        background-color: #242e3a;
+        border-bottom: 3px solid #fffafa;
+        /* background-color: #242e3a; */
     }
     
     #nav-logo {
