Crea el servicio de food para el llenado de los botones del componente Food, sigue haciendo el ruteo de los botones en la sección del ticket

--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -1,8 +1,4 @@
 <app-nav></app-nav>
-<app-ticket>
-</app-ticket>
+<app-ticket></app-ticket>
 <app-footer></app-footer>
-
-
-
-<!-- <app-products></app-products> -->
+<!-- <app-saucers-breakfast></app-saucers-breakfast> -->
