--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -1,7 +1,7 @@
 <header>
     <nav id="nav-logo" class="nav">
         <img id="logo-nav" src="../../../../assets/img/logo-nav.png" alt="">
-        <button [routerLink]="['desayuno']" type="button" id="desayuno" class="btn btn-outline-dark">Desayuno</button>
+        <button [routerLink]="['desayuno']" type="button" id="desayuno" class="btn">Desayuno</button>
         <button [routerLink]="['comida']" type="button" id="comida" class="btn btn-outline-info">Comida</button>
     </nav>
 
