--- a/src/app/components/shared/ticket/ticket.component.html
+++ b/src/app/components/shared/ticket/ticket.component.html
@@ -1,11 +1,10 @@
 <main id="main-ticket">
     <main id="main-products">
-        <main id="products">
-
-        </main>
+        <router-outlet></router-outlet>
     </main>
-    <section id="ticket">
-        <h1 class="font">ORDEN</h1>
+
+    <section id="ticket" class="font-verdana">
+        <h1>ORDEN</h1>
         <main id="elements" class="aling-left">
             <p id="quantity" class="font">#</p>
             <p id="item" class="font">Items</p>
