--- a/src/app/components/breakfast/breakfast.component.html
+++ b/src/app/components/breakfast/breakfast.component.html
@@ -1,3 +1,3 @@
-<main id="container">
-    <button *ngFor="let btnBreak of botones; let i=index" [id]="btnBreak.id" class="button"> {{btnBreak.nombre}} </button>
+<main class="container">
+    <button [routerLink]="['producto', i]" type="button" *ngFor="let btnBreak of buttonsBreak; let i = index" [id]="btnBreak.type" class="{{btnBreak.type}} button"> {{btnBreak.nombre}} </button>
 </main>
