--- a/src/app/components/food/food.component.html
+++ b/src/app/components/food/food.component.html
@@ -1,10 +1,3 @@
-<main class="principal">
-    <main class="main-button">
-        <button class="button saucers">Platillos</button>
-        <button class="button drink">Bebidas</button>
-        <button id="garniture" class="button">Guarnición</button>
-        <button class="button ok">OK</button>
-        <button class="button extra">Extra</button>
-        <button id="ingredients-food" class="button">Sin ingredientes</button>
-    </main>
+<main class="container">
+    <button type="button" *ngFor="let btnFood of buttonsFood" [id]="btnFood.type" class="{{btnFood.type}} button"> {{ btnFood.nombre }}</button>
 </main>
