--- a/src/app/components/food/food.component.html
+++ b/src/app/components/food/food.component.html
@@ -1,3 +1,8 @@
-<main class="container">
-    <button type="button" *ngFor="let btnFood of buttonsFood" [id]="btnFood.type" class="{{btnFood.type}} button"> {{ btnFood.nombre }}</button>
+<main class="containerF">
+    <p id="p-saucer" class="title-order font-verdana">Hamburguesa</p>
+    <p id="p-drink" class="title-order font-verdana">Bebidas</p>
+    <p id="p-ingredients" class="title-order font-verdana">Ingredientes</p>
+    <p id="p-extra" class="title-order font-verdana">Guarnición</p>
+    <p id="p-extra" class="title-order font-verdana">Extra</p>
+    <button type="button" *ngFor="let btnFood of buttonsFood" [id]="btnFood.type" class="{{btnFood.type}} button"> <img [src]="btnFood.img" alt="" class="img-button"> <br> {{ btnFood.nombre }}</button>
 </main>
