Termina la funcionalidad de los botones de desayuno y comida. Todos los elementos estan ubicados en la posición correcta

--- a/src/app/components/food/food.component.html
+++ b/src/app/components/food/food.component.html
@@ -1,8 +1,9 @@
 <main class="containerF">
-    <p id="p-saucer" class="title-order font-verdana">Hamburguesa</p>
-    <p id="p-drink" class="title-order font-verdana">Bebidas</p>
-    <p id="p-ingredients" class="title-order font-verdana">Ingredientes</p>
-    <p id="p-extra" class="title-order font-verdana">Guarnición</p>
+    <p id="p-saucer-food" class="title-order font-verdana">Hamburguesa</p>
+    <p id="p-drink-food" class="title-order font-verdana">Bebidas</p>
+    <p id="p-ingredients-food" class="title-order font-verdana">Ingredientes</p>
+    <p id="p-garrison" class="title-order font-verdana">Guarnición</p>
     <p id="p-extra" class="title-order font-verdana">Extra</p>
-    <button type="button" *ngFor="let btnFood of buttonsFood" [id]="btnFood.type" class="{{btnFood.type}} button"> <img [src]="btnFood.img" alt="" class="img-button"> <br> {{ btnFood.nombre }}</button>
+    <button type="button" *ngFor="let btnFood of buttonsFood" [id]="btnFood.id" class="{{btnFood.type}} button"> <img [src]="btnFood.img" alt="" class="img-button"> <br> {{ btnFood.nombre }}</button>
+    <button type="button" id="ok-food" class="button ok">OK</button>
 </main>
