--- a/src/app/components/breakfast/breakfast.component.html
+++ b/src/app/components/breakfast/breakfast.component.html
@@ -1,8 +1,8 @@
 <main class="containerB">
-    <p id="p-saucer" class="title-order font-verdana">Platillo</p>
-    <p id="p-drink" class="title-order font-verdana">Bebidas</p>
-    <p id="p-ingredients" class="title-order font-verdana">Ingredientes</p>
-    <p id="p-extra" class="title-order font-verdana">Extra</p>
+    <p id="p-saucer-break" class="title-order font-verdana">Platillo</p>
+    <p id="p-drink-break" class="title-order font-verdana">Bebidas</p>
+    <p id="p-ingredients-break" class="title-order font-verdana">Ingredientes</p>
+    <p id="p-extra-break" class="title-order font-verdana">Extra</p>
     <button [routerLink]="['producto', i]" type="button" *ngFor="let btnBreak of buttonsBreak; let i = index" [id]="btnBreak.id" class="{{btnBreak.type}} button"> <img [src]="btnBreak.img" class="img-button" alt=""> <br> {{btnBreak.nombre}} </button>
     <button type="button" class="button ok">OK</button>
 </main>
