Agrega el icono de borrar y el lapiz de editar

--- a/src/app/components/shared/ticket/ticket.component.html
+++ b/src/app/components/shared/ticket/ticket.component.html
@@ -17,7 +17,7 @@
             <p id="name-item">{{items.ticket}}</p>
             <p>${{items.precio}}</p>
             <i class="fas fa-pencil-alt"></i>
-            <i class="far fa-trash-alt"></i>
+            <a> <i class="far fa-trash-alt"></i> </a>
         </main>
     </section>
 </main>
