--- a/src/app/components/breakfast/breakfast.component.html
+++ b/src/app/components/breakfast/breakfast.component.html
@@ -3,6 +3,6 @@
     <p id="p-drink-break" class="title-order font-verdana">Bebidas</p>
     <p id="p-ingredients-break" class="title-order font-verdana">Ingredientes</p>
     <p id="p-extra-break" class="title-order font-verdana">Extra</p>
-    <button type="button" (click)="filterbuttons(i)" *ngFor="let btnBreak of buttonsBreak; let i = index" [id]="btnBreak.id" class="{{btnBreak.type}} button"> <img [src]="btnBreak.img" class="img-button" alt=""> <br> {{btnBreak.nombre}} </button>
+    <button type="button" (click)="printButtons(i)" *ngFor="let btnBreak of buttonsBreak; let i = index" [id]="btnBreak.id" class="{{btnBreak.type}} button"> <img [src]="btnBreak.img" class="img-button" alt=""> <br> {{btnBreak.nombre}} </button>
     <button type="button" class="button ok">OK</button>
 </main>
