--- a/src/app/components/shared/ticket/ticket.component.html
+++ b/src/app/components/shared/ticket/ticket.component.html
@@ -6,18 +6,20 @@
 
     <section id="ticket" class="font-verdana">
         <h1>ORDEN</h1>
-        <main id="title-ticket" class="elements">
+        <main id="title-ticket" class="elements-title">
             <p class="font quantity">#</p>
             <p class="font item">Items</p>
             <p class="font cost">Costo</p>
 
         </main>
-        <main id="items-ticket" *ngFor="let items of getItemOrder()" class="elements font-roboto">
+
+        <main id="items-ticket" *ngFor="let items of getItemOrder()" class="elements-ticket font-roboto">
             <p>1</p>
             <p id="name-item">{{items.ticket}}</p>
             <p>${{items.precio}}</p>
             <i class="fas fa-pencil-alt"></i>
             <a> <i class="far fa-trash-alt"></i> </a>
         </main>
+
     </section>
 </main>
