Agrega scroll a la sección del ticket que muestra los elementos que son seleccionados para la orden

--- a/src/styles.css
+++ b/src/styles.css
@@ -395,6 +395,8 @@ footer {
     background-color: #38404a;
     text-align: center;
     grid-column: 2;
+    height: 66vh;
+    overflow: scroll;
 }
 
 .elements {
